apps/jellyfin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    inject-ca-bundle: "true"
