apps/jellyfin/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: jellyfin
  hostnames:
    - jellyfin.tomerhanochi.com
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
